[package]
name = "pac-man"
version = "0.1.0"
authors = ["Gregory Langlais <general@gregorylanglais.com>"]
edition = "2018"
description = "AWS Lambda streaming API consumer"
license = "MIT"
readme = "README.md"
repository = "https://github.com/gregl83/pac-man"
homepage = "https://crates.io/crates/pac-man"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
log = "0.4.13"
simple_logger = "1.11.0"
simple-error = "0.2.3"
serde = { version = "1.0.120", features = ["derive"] }
tokio = { version = "1.1.0", features = ["full"] }
hyper = { version = "0.14.2", features = ["full"] }