[package]
name = "pac-man"
version = "0.1.0"
authors = ["Gregory Langlais <general@gregorylanglais.com>"]
edition = "2018"
description = "AWS Lambda streaming API consumer"
license = "MIT"
readme = "README.md"
repository = "https://github.com/gregl83/pac-man"
homepage = "https://crates.io/crates/pac-man"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.3"
futures = "0.3.12"
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime", branch = "master" }
log = "0.4.13"
simple_logger = "1.11.0"
simple-error = "0.2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.39"
tokio = { version = "0.2.4", features = ["full"] }
bytes = "0.5.0"
hyper = "0.13.9"
hyper-tls = "0.4.3"
http = "0.2.3"
rusoto_core = "0.45.0"
rusoto_s3 = "0.45.0"
rusoto_secretsmanager = "0.45.0"